# yt-rs

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
crates/generator/: Cargo.toml  README.md
crates/generator/src/: classify.rs  emit.rs  main.rs  spec.rs
crates/yt-rs/: Cargo.toml
crates/yt-rs/examples/: list-issues.rs  read-issue.rs  readme.rs
crates/yt-rs/src/: clients.rs  constants.rs  lib.rs  models.rs
crates/yt-rs/src/clients/: issues.rs  users.rs
crates/yt-rs/src/clients/issues/: activities.rs  attachments.rs  comments.rs  custom_fields.rs  links.rs  mod.rs  params.rs  project.rs  sprints.rs  tags.rs  vcs_changes.rs  work_items.rs
crates/yt-rs/src/models/: user.rs
crates/yt-rs/tests/: models_roundtrip.rs
docs/: openapi.json
