[workspace]
resolver = "3"
members = [
    "crates/*"
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Minkin Aleksei <thespiritofnetwork@gmail.com>"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace.dependencies]
# async runtime
tokio = { version = "1.52", default-features = false }

# serde
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

# http client
reqwest = { version = "0.13", default-features = false }
url = { version = "2.5", default-features = false }

# error handling
thiserror = { version = "2.0", default-features = false }

