[package]
name = "yt-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
examples = [
    "tokio",
    "tokio/rt",
    "tokio/rt-multi-thread",
    "tokio/macros"
]

[[example]]
name = "readme"
path = "examples/readme.rs"
required-features = ["examples"]

[dependencies]
# serde
serde = { workspace = true, features = ["derive"]}
serde_json = { workspace = true, features = ["std"] }

# http client
reqwest = { workspace = true, features = ["rustls", "json", "query"] }
url = { workspace = true, features = ["serde"] }

# error handling
thiserror = { workspace = true, features = ["default"] }

# tokio runtime for examples
tokio = { workspace = true, optional = true }